--- a/microservicio-item/src/main/resources/application.properties
+++ b/microservicio-item/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 server.port = 8002
-spring.application.name= servicio.item
+spring.application.name= servicio-items
 
 eureka.client.service-url.default = http://localhost:8761/eureka
 
