--- a/microservicio-item/pom.xml
+++ b/microservicio-item/pom.xml
@@ -52,6 +52,11 @@
       <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-config</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
