--- a/microservicio-config-server/src/main/resources/application.properties
+++ b/microservicio-config-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8888
 spring.application.name=config-server
 
-spring.cloud.config.server.git.uri=file:///C:/microservicios/config
+#spring.cloud.config.server.git.uri=file:///C:/microservicios/config
+spring.cloud.config.server.git.uri=https://github.com/Mhartyn/microservicio-configuracion.git
