--- a/microservicio-zuul-server/src/main/resources/application.properties
+++ b/microservicio-zuul-server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 server.port = 8090
-spring.application.name= servicio.zuul.server
+spring.application.name= servicio-zuul-server
 
 eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
 
@@ -13,6 +13,10 @@ zuul.routes.items.path = /api/items/**
 zuul.routes.usuarios.service-id = servicio-usuarios
 zuul.routes.usuarios.path = /api/usuarios/**
 
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
-#ribbon.ConnectTimeout: 3000
-#ribbon.ReadTimeout: 10000
+zuul.routes.security.service-id = servicio-oauth
+zuul.routes.security.path = /api/security/**
+zuul.routes.security.sensitive-headers=Cookie,Set-Cookie
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
+ribbon.ConnectTimeout: 3000
+ribbon.ReadTimeout: 10000
