--- a/microservicio-config-server/src/main/resources/application.properties
+++ b/microservicio-config-server/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=config-server
 
 #spring.cloud.config.server.git.uri=file:///C:/microservicios/config
 spring.cloud.config.server.git.uri=https://github.com/Mhartyn/microservicio-configuracion.git
+spring.cloud.config.server.git.username=mhartynpaez@hotmail.com
+spring.cloud.config.server.git.password=Cl@ve2020
