--- a/microservicio-producto/pom.xml
+++ b/microservicio-producto/pom.xml
@@ -56,6 +56,16 @@
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-config</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
