--- a/microservicio-usuario/pom.xml
+++ b/microservicio-usuario/pom.xml
@@ -19,8 +19,8 @@
   <dependencies>
     <dependency>
       <groupId>com.microservicio.common.usuario</groupId>
-	    <artifactId>microservicio-common-usuario</artifactId>
-	    <version>0.0.1-SNAPSHOT</version>
+      <artifactId>microservicio-common-usuario</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -61,6 +61,16 @@
       <artifactId>spring-boot-starter-data-rest</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-config</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <dependencyManagement>
     <dependencies>
@@ -68,6 +78,13 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
         <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>Hoxton.SR4</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
