--- a/microservicio-usuario/src/main/resources/application.properties
+++ b/microservicio-usuario/src/main/resources/application.properties
@@ -6,3 +6,6 @@ eureka.instance.instance-id= ${spring.application.name}:${spring.application.ins
 
 eureka.client.service-url.default = http://localhost:8761/eureka
 logging.level.org.hibernete.SQL=debug
+
+spring.sleuth.sampler.probability=1.0
+spring.zipkin.base-url=http://localhost:9411
