--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,16 +11,32 @@ services:
     networks:
       - local
 
+  mysql:
+    image: mysql:latest
+    container_name: mysql
+    ports:
+      - "33060:3306"
+    environment:
+      - "MYSQL_ROOT_PASSWORD=2020"
+    networks:
+      - local
+
   zipkin:
     image: openzipkin/zipkin:latest
     container_name: zipkin
     depends_on:
       - rabbitmq
+      - mysql
     ports:
       - "9411:9411"
     environment:
       - "TZ=@timezone@"
       - "RABBIT_URI=amqp://guest:guest@rabbitmq:5672"
+      - "STORAGE_TYPE=mysql"
+      - "MYSQL_HOST=mysql"
+      - "MYSQL_TCP_PORT=33060"
+      - "MYSQL_USER=zipkin"
+      - "MYSQL_PASS=zipkin"
     networks:
       - local
 
