--- a/microservicio-item/src/main/resources/application.properties
+++ b/microservicio-item/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 server.port = 8002
 spring.application.name= servicio-items
 
-eureka.client.service-url.default = http://localhost:8761/eureka
+eureka.client.service-url.default = http://eureka-server:8761/eureka
 
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
 #ribbon.ConnectTimeout: 3000
 #ribbon.ReadTimeout: 10000
 
 spring.sleuth.sampler.probability=1.0
-spring.zipkin.base-url=http://localhost:9411
+#spring.zipkin.base-url=http://localhost:9411
