--- a/microservicio-zuul-server/src/main/resources/application.properties
+++ b/microservicio-zuul-server/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port = 8090
 spring.application.name= servicio-zuul-server
 
-eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone = http://eureka-server:8761/eureka/
 
 zuul.routes.producto.service-id = servicio-productos
 zuul.routes.producto.path = /api/productos/**
@@ -22,4 +22,4 @@ ribbon.ConnectTimeout: 3000
 ribbon.ReadTimeout: 10000
 
 spring.sleuth.sampler.probability=1.0
-spring.zipkin.base-url=http://localhost:9411
+#spring.zipkin.base-url=http://localhost:9411
