--- a/microservicio-producto/Dockerfile
+++ b/microservicio-producto/Dockerfile
@@ -1,6 +1,5 @@
 FROM openjdk:12
 VOLUME /tmp
-EXPOSE 8001
 ADD ./target/microservicio-producto-0.0.1-SNAPSHOT.jar microservicio-producto.jar
 ENTRYPOINT [ "java", "-jar", "/microservicio-producto.jar" ]
 
@@ -10,4 +9,4 @@ ENTRYPOINT [ "java", "-jar", "/microservicio-producto.jar" ]
 #docker build -t microservicio-producto:v1 .
 
 #docker network create microservicio
-#docker run -p 8001:8001 --name producto --network microservicio microservicio-producto:v1 
+#docker run -P --network microservicio microservicio-producto:v1 
