--- a/microservicio-item/src/main/resources/application.properties
+++ b/microservicio-item/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-
-server.port = 8002
+#server.port = 8002
 spring.application.name= servicio-items
+server.port=${PORT:0}
 
-eureka.client.service-url.default = http://eureka-server:8761/eureka
+eureka.instance.instance-id= ${spring.application.name}:${spring.application.instance_id:${random.value}}
+#eureka.client.service-url.default = http://eureka-server:8761/eureka
 
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
 #ribbon.ConnectTimeout: 3000
