--- a/microservicio-usuario/src/main/resources/application.properties
+++ b/microservicio-usuario/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=${PORT:0}
 
 eureka.instance.instance-id= ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-eureka.client.service-url.default = http://eureka-server:8761/eureka
+#eureka.client.service-url.default = http://eureka-server:8761/eureka
 logging.level.org.hibernete.SQL=debug
 
 spring.sleuth.sampler.probability=1.0
