--- a/microservicio-zuul-server/src/main/resources/application.properties
+++ b/microservicio-zuul-server/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-
+spring.profiles.active=dev
 server.port = 8090
 spring.application.name= servicio-zuul-server
 
-eureka.client.serviceUrl.defaultZone = http://eureka-server:8761/eureka/
+#eureka.client.serviceUrl.defaultZone = http://eureka-server:8761/eureka/
 
 zuul.routes.producto.service-id = servicio-productos
 zuul.routes.producto.path = /api/productos/**
