cambios en los compose

--- a/02-comun-docker-compose.yml
+++ b/02-comun-docker-compose.yml
@@ -26,10 +26,10 @@ services:
       depends_on:
         - config-server
         - eureka-server
-        - microservicio-producto
-        - microservicio-item
-        - microservicio-usuario
-        - microservicio-oauth        
+        #- microservicio-producto
+        #- microservicio-item
+        #- microservicio-usuario
+        #- microservicio-oauth
       restart: always
       networks:
         - microservicio
