--- a/05-logs-docker-compose.yml
+++ b/05-logs-docker-compose.yml
@@ -1,5 +1,18 @@
 version: "3.7"
 services:
+
+  mysql:
+    image: mysql:latest
+    container_name: mysql
+    ports:
+      - "33060:3306"
+    environment:
+      - "MYSQL_ROOT_PASSWORD=2020"
+      - "MYSQL_DATABASE=productos"
+    restart: always
+    networks:
+      - microservicio
+
   rabbitmq:
     image: rabbitmq:3.8-management-alpine
     container_name: rabbitmq
