--- a/microservicio-oauth/src/main/resources/bootstrap.properties
+++ b/microservicio-oauth/src/main/resources/bootstrap.properties
@@ -1,4 +1,6 @@
-spring.application.name=servicio-oauth
+spring.cloud.config.uri=http://localhost:8888
 #spring.cloud.config.uri=http://config-server:8888
 management.endpoints.web.exposure.include=*
+spring.application.name=servicio-oauth
 spring.profiles.active=dev
+#spring.profiles.active=prod
