--- a/microservicio-zuul-server/src/main/resources/bootstrap.properties
+++ b/microservicio-zuul-server/src/main/resources/bootstrap.properties
@@ -1,4 +1,6 @@
-spring.application.name=servicio-zuul-server
+spring.cloud.config.uri=http://localhost:8888
 #spring.cloud.config.uri=http://config-server:8888
+spring.application.name=servicio-zuul-server
 management.endpoints.web.exposure.include=*
 spring.profiles.active=dev
+#spring.profiles.active=prod
