--- a/k8s/service/config-server.yml
+++ b/k8s/service/config-server.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ms-producto-servicio
+  name: config-server
 spec:
   type: LoadBalancer
   selector:
-    app: ms-producto
+    app: config-server
   ports:
-  - port: 8005
-    targetPort: 8002
+  - port: 8888
+    targetPort: 8888
