pruebas con dockerfile mvn

--- a/microservicio-producto/Dockerfile
+++ b/microservicio-producto/Dockerfile
@@ -1,6 +1,13 @@
+FROM maven:3.6.3-jdk-14 AS MAVEN_TOOL_CHAIN
+#maven:3.5.2-jdk-8-alpine
+COPY pom.xml /tmp/
+COPY src /tmp/src/
+WORKDIR /tmp/
+RUN mvn clean package -DskipTests
+
 FROM openjdk:12
 VOLUME /tmp
-ADD ./target/microservicio-producto-0.0.1-SNAPSHOT.jar microservicio-producto.jar
+COPY --from=MAVEN_TOOL_CHAIN /tmp/target/microservicio-producto-0.0.1-SNAPSHOT.jar microservicio-producto.jar
 ENTRYPOINT [ "java", "-jar", "/microservicio-producto.jar" ]
 
 #./mvnw clean package
