dockerfile de common

--- a/microservicio-common/pom.xml
+++ b/microservicio-common/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.microservicio.common</groupId>
 	<artifactId>microservicio-common</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>common</name>
+	<description>Microservicio Common</description>
 
 	<properties>
 		<java.version>1.8</java.version>
