--- a/microservicio-producto/pom.xml
+++ b/microservicio-producto/pom.xml
@@ -10,8 +10,8 @@
   <groupId>com.microservicio.producto</groupId>
   <artifactId>microservicio-producto</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>demo</name>
-  <description>Demo project for Spring Boot</description>
+  <name>microservicio-producto</name>
+  <description>Microservicio Producto</description>
   <properties>
     <java.version>1.8</java.version>
   </properties>
