--- a/microservicio-common/Dockerfile
+++ b/microservicio-common/Dockerfile
@@ -1,8 +1,8 @@
 FROM maven:3.6.3-openjdk-16 
 
-COPY pom.xml /tmp/
+COPY ./pom.xml /tmp/
 
-COPY src /tmp/src/
+COPY ./src /tmp/src/
 WORKDIR /tmp/
 
 RUN mvn clean install
