dockerfile de common -5

--- a/microservicio-common/Dockerfile
+++ b/microservicio-common/Dockerfile
@@ -1,8 +1,8 @@
 FROM maven:3.6.3-openjdk-16 
 
-ADD pom.xml /tmp/
+ADD ./microservicio-common/pom.xml /tmp/
 
-ADD src /tmp/src/
+ADD ./microservicio-common/src /tmp/src/
 WORKDIR /tmp/
 
 RUN mvn clean install
