--- a/microservicio-item/Dockerfile
+++ b/microservicio-item/Dockerfile
@@ -1,6 +1,12 @@
+FROM mhartyn/ms-common:latest AS MAVEN_TOOL_CHAIN
+COPY ./microservicio-item/pom.xml /tmp/
+COPY ./microservicio-item/src /tmp/src/
+WORKDIR /tmp/
+RUN mvn clean package -DskipTests
+
 FROM openjdk:12
 VOLUME /tmp
-ADD ./target/microservicio-item-0.0.1-SNAPSHOT.jar microservicio-item.jar
+COPY --from=MAVEN_TOOL_CHAIN ./target/*.jar microservicio-item.jar
 ENTRYPOINT [ "java", "-jar", "/microservicio-item.jar" ]
 
 #./mvnw clean package
