--- a/microservicio-producto/Dockerfile
+++ b/microservicio-producto/Dockerfile
@@ -1,19 +1,13 @@
 FROM mhartyn/ms-common:latest AS MAVEN_TOOL_CHAIN
-
-COPY ./pom.xml /tmp/
-
-COPY ./src /tmp/src/
+COPY ./microservicio-producto/pom.xml /tmp/
+COPY ./microservicio-producto/src /tmp/src/
 WORKDIR /tmp/
-
 RUN mvn clean package -DskipTests
 
 FROM openjdk:12
 WORKDIR /tmp/
-
 COPY src /tmp/src/
-
 VOLUME /tmp
-
 COPY --from=MAVEN_TOOL_CHAIN /tmp/target/*.jar microservicio-producto.jar
 ENTRYPOINT [ "java", "-jar", "/microservicio-producto.jar" ]
 
