--- a/microservicio-producto/Dockerfile
+++ b/microservicio-producto/Dockerfile
@@ -6,7 +6,7 @@ RUN mvn clean package -DskipTests
 
 FROM openjdk:12
 WORKDIR /tmp/
-COPY src /tmp/src/
+#COPY ./microservicio-producto/src /tmp/src/
 VOLUME /tmp
 COPY --from=MAVEN_TOOL_CHAIN /tmp/target/*.jar microservicio-producto.jar
 ENTRYPOINT [ "java", "-jar", "/microservicio-producto.jar" ]
