--- a/microservicio-oauth/Dockerfile
+++ b/microservicio-oauth/Dockerfile
@@ -1,4 +1,4 @@
-FROM mhartyn/ms-common-usuario:latest AS MAVEN_TOOL_CHAIN
+FROM mhartyn/ms-comon-usuario:latest AS MAVEN_TOOL_CHAIN
 COPY ./microservicio-oauth/pom.xml /tmp/
 COPY ./microservicio-oauth/src /tmp/src/
 WORKDIR /tmp/
@@ -7,7 +7,7 @@ RUN mvn clean package -DskipTests
 FROM openjdk:12
 VOLUME /tmp
 EXPOSE 9100
-COPY --from=MAVEN_TOOL_CHAIN ./target/*.jar microservicio-oauth.jar
+COPY --from=MAVEN_TOOL_CHAIN /tmp/target/*.jar microservicio-oauth.jar
 ENTRYPOINT [ "java", "-jar", "/microservicio-oauth.jar" ]
 
 #./mvnw clean package -DskipTests
