--- a/microservicio-usuario/Dockerfile
+++ b/microservicio-usuario/Dockerfile
@@ -1,4 +1,4 @@
-FROM mhartyn/ms-common-usuario:latest AS MAVEN_TOOL_CHAIN
+FROM mhartyn/ms-comon-usuario:latest AS MAVEN_TOOL_CHAIN
 COPY ./microservicio-usuario/pom.xml /tmp/
 COPY ./microservicio-usuario/src /tmp/src/
 WORKDIR /tmp/
@@ -6,7 +6,7 @@ RUN mvn clean package -DskipTests
 
 FROM openjdk:12
 VOLUME /tmp
-COPY --from=MAVEN_TOOL_CHAIN ./target/*.jar microservicio-usuario.jar
+COPY --from=MAVEN_TOOL_CHAIN /tmp/target/*.jar microservicio-usuario.jar
 ENTRYPOINT [ "java", "-jar", "/microservicio-usuario.jar" ]
 
 #./mvnw clean package
