--- a/compose/01-bds-docker-compose.yml
+++ b/compose/01-bds-docker-compose.yml
@@ -5,24 +5,30 @@ services:
     container_name: postgres
     ports:
       - "54320:5432"
+    volumes: 
+      - /home/mhartyn/Documentos/codigo/volumenes/postgres/lucille-data:/var/lib/postgresql/data
     environment:
       - "POSTGRES_PASSWORD=2020" 
       - "POSTGRES_DB=usuarios"
     restart: always
     networks:
       - microservicio
-
+    #conexion a la bd por consola
+    #sudo psql -p 54320 -U postgres -h localhost
   mysql:
     image: mysql:latest
     container_name: mysql
     ports:
       - "33060:3306"
+    volumes: 
+      - /home/mhartyn/Documentos/codigo/volumenes/mysql/lucille-data:/var/lib/mysql
     environment:
       - "MYSQL_ROOT_PASSWORD=2020"
       - "MYSQL_DATABASE=productos"
     restart: always
     networks:
       - microservicio
-
+      #conexion por consolo a mysql
+      #mysql -h 127.0.0.1 -u root -P 33060 -p
 networks:
   microservicio:
